Changes to team page, fixed horizontal scroll

--- a/src/styles/custom-utilities.css
+++ b/src/styles/custom-utilities.css
@@ -1,4 +1,5 @@
 /* navbar and sidenav */
+
 .header {
   position: fixed;
   top: 0;
@@ -159,7 +160,6 @@ li svg #white-svg:hover {
 }
 
 .image {
-  opacity: 1;
   display: block;
   width: 100%;
   height: auto;
@@ -188,7 +188,6 @@ li svg #white-svg:hover {
 
 .hover-photo:hover {
   opacity: 0.7;
-  
 }
 
 .text {
@@ -245,48 +244,49 @@ li svg #white-svg:hover {
   width: 19rem;
 }
 
+.grid {
+display: grid;
+margin-left: 15.2%;
+}
+
+
 .hovereffect {
-  width: 100%;
+  width: 70%;
   height: 100%;
-  float: left;
   overflow: hidden;
   position: relative;
   text-align: center;
   cursor: default;
+  background: rgba(105, 75, 228, 0.8);
 }
 
 .hovereffect .overlay {
   width: 100%;
   height: 100%;
   position: absolute;
-  overflow: hidden;
   top: 0;
   left: 0;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-}
-
-.hovereffect:hover .overlay {
-  background-color: rgba(170,170,170,0.4);
-}
-
-.hovereffect h2, .hovereffect img {
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
+  padding: 50px 20px;
 }
 
 .hovereffect img {
   display: block;
   position: relative;
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
+  max-width: none;
+  width: calc(100% + 20px);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(-10px,0,0);
+  transform: translate3d(-10px,0,0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .hovereffect:hover img {
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
 }
 
 .hovereffect h2 {
@@ -295,43 +295,47 @@ li svg #white-svg:hover {
   text-align: center;
   position: relative;
   font-size: 17px;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.6);
+  overflow: hidden;
+  padding: 0.5em 0;
+  background-color: transparent;
 }
 
-.hovereffect a.info {
-  display: inline-block;
-  text-decoration: none;
-  padding: 7px 14px;
-  text-transform: uppercase;
-  color: #fff;
-  border: 1px solid #fff;
-  margin: 50px 0 0 0;
-  background-color: transparent;
+.hovereffect h2:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  content: '';
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: transform 0.35s;
+  -webkit-transform: translate3d(-100%,0,0);
+  transform: translate3d(-100%,0,0);
+}
+
+.hovereffect:hover h2:after {
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+.hovereffect a, .hovereffect p {
+  color: #FFF;
   opacity: 0;
   filter: alpha(opacity=0);
-  -webkit-transform: scale(1.5);
-  -ms-transform: scale(1.5);
-  transform: scale(1.5);
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  font-weight: normal;
-  height: 85%;
-  width: 85%;
-  position: absolute;
-  top: -20%;
-  left: 8%;
-  padding: 70px;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(100%,0,0);
+  transform: translate3d(100%,0,0);
 }
 
-.hovereffect:hover a.info {
+.hovereffect:hover a, .hovereffect:hover p {
   opacity: 1;
   filter: alpha(opacity=100);
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
-  background-color: rgba(0,0,0,0.4);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
 }
+
 
 
 /* ********* MEDIA QUERIES ********* */
@@ -341,6 +345,7 @@ li svg #white-svg:hover {
     display: none;
   }
 }
+
 
 @media (min-width: 700px) {
   .mobile-nav {
